CRM-26 Changed the MenuItem divs for spans, and fixed the formatting of the buttons. These all now align just the same.

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -105,13 +105,16 @@ body {
   @apply grid grid-cols-4 pt-[20px] pb-[40px] gap-[20px] max-h-[600px] px-[20px] overflow-y-scroll max-w-[100%];
   @apply mobile:grid-cols-2;
   .menu-item{
-    @apply flex rounded-[6px] flex-col max-w-[160px] px-[20px] py-[20px] bg-[white] gap-[8px];
+    @apply flex rounded-[6px] flex-col max-w-[160px] px-[20px] py-[20px] bg-[white] gap-[8px] justify-between;
     box-shadow: 0 0px 4px 2px var(--drop-shadow-color);
     .menu-item-picture-and-price-group{
       @apply grid grid-cols-2 gap-[10px] items-end;
     }
+    .menu-pricing-group{
+      @apply flex flex-col;
+    }
     button{
-      @apply text-[1.2rem] rounded-[8px] text-[white] bg-[#A760FF] py-[8px] border-none;    
+      @apply text-[1.2rem] rounded-[8px] align-bottom text-[white] bg-[#A760FF] py-[8px] border-none;    
       &:active{      
         @apply bg-[--active-button-color];
       }
